cli/aws_orbit/data/kubectl/orbit-system/commons/overlays/private/kustomizaton.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: cert-manager-cainjector
  namespace: cert-manager
  spec:
    template:
      spec:
        nodeSelector:
          orbit/usage: reserved
          orbit/node-group: env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: cert-manager
  namespace: cert-manager
  spec:
    template:
      spec:
        nodeSelector:
          orbit/usage: reserved
          orbit/node-group: env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: cert-manager-webhook
  namespace: cert-manager
  spec:
    template:
      spec:
        nodeSelector:
          orbit/usage: reserved
          orbit/node-group: env
