cli/aws_orbit/data/kubectl/orbit-system/commons/overlays/private/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-cainjector
  namespace: cert-manager
spec:
  template:
    spec:
      nodeSelector:
        orbit/usage: reserved
        orbit/node-group: env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  template:
    spec:
      nodeSelector:
        orbit/usage: reserved
        orbit/node-group: env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cert-manager-webhook
    app.kubernetes.io/name: cert-manager-webhook
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cert-manager-webhook
  template:
    metadata:
      labels:
        app: cert-manager-webhook
        app.kubernetes.io/name: cert-manager-webhook
    spec:
      nodeSelector:
        orbit/usage: reserved
        orbit/node-group: env
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cert-manager-webhook
    app.kubernetes.io/name: cert-manager-webhook
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  selector:
    app.kubernetes.io/name: cert-manager-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: cert-manager-webhook
    app.kubernetes.io/name: cert-manager-webhook
  name: cert-manager-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: cert-manager-webhook
    app.kubernetes.io/name: cert-manager-webhook
  name: cert-manager-webhook
